--- a/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
+++ b/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
@@ -28,6 +28,24 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-ios|AnyCPU'">
+	  <EnableCodeSigning>false</EnableCodeSigning>
+	</PropertyGroup>
+	<ItemGroup Condition="!$(TargetFramework.StartsWith('net6.0-android'))">
+		<Compile Remove="**/*.Android.cs" />
+		<Compile Remove="**/Android/**/*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="!$(TargetFramework.StartsWith('net6.0-ios')) AND !$(TargetFramework.StartsWith('net6.0-maccatalyst'))">
+		<Compile Remove="**/*.macios.cs" />
+		<Compile Remove="**/macios/**/*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
+		<Compile Remove="**/*.Windows.cs" />
+		<Compile Remove="**/Windows/**/*.cs" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -36,6 +54,7 @@
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 
 		<!-- Images -->
+		<MauiImage Include="Resources\Images\*" />
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
@@ -43,31 +62,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
-	</ItemGroup>
-	<ItemGroup>
-	  <BundleResource Include="Resources\Images\dotnet_bot.svg" />
-	  <BundleResource Include="**/*" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0" />
 	  <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.1.1" />
 	  <PackageReference Include="StrawberryShake.Maui" Version="13.0.0-preview.54" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.9" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 	</ItemGroup>
-	<ItemGroup>
-	  <None Remove=".graphqlrc.json" />
-	  <None Remove="Services\" />
-	  <None Remove="Pages\" />
-	  <None Remove="ViewModels\" />
-	  <None Remove="CommunityToolkit.Mvvm" />
-	  <None Remove="Services\GraphQL\" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Services\" />
-	  <Folder Include="Pages\" />
-	  <Folder Include="ViewModels\" />
-	  <Folder Include="Services\GraphQL\" />
-	</ItemGroup>
+
 </Project>
