--- a/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
+++ b/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
@@ -13,7 +13,7 @@
 		<ApplicationTitle>HotChocolateGraphQL.Mobile</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.hotchocolategraphql.mobile</ApplicationId>
+		<ApplicationId>com.minnick.HotChocolateGraphQL</ApplicationId>
 		<ApplicationIdGuid>3cd59958-be04-4d0f-b495-c5ac534caf01</ApplicationIdGuid>
 
 		<!-- Versions -->
@@ -25,12 +25,12 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
-		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-ios|AnyCPU'">
 	  <EnableCodeSigning>false</EnableCodeSigning>
 	</PropertyGroup>
+
 	<ItemGroup Condition="!$(TargetFramework.StartsWith('net6.0-android'))">
 		<Compile Remove="**/*.Android.cs" />
 		<Compile Remove="**/Android/**/*.cs" />
@@ -67,8 +67,20 @@
 	  <PackageReference Include="StrawberryShake.Maui" Version="13.0.0-preview.54" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.9" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<GraphQL Remove="schema.graphql" />
+		<GraphQL Remove="schema.extensions.graphql" />
+		<GraphQLConfig Remove=".graphqlrc.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Views\" />
+	  <None Remove="Views\Books\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Views\" />
+	  <Folder Include="Views\Books\" />
+	</ItemGroup>
 </Project>
