--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -21,7 +21,7 @@ jobs:
         dotnet-version: '6.0.x'
 
     - name: Install dependencies
-      run: dotnet restore src/
+      run: dotnet restore src/HotChocolateGraphQL.Backend/
 
     - name: Build
       run: dotnet build src/HotChocolateGraphQL.Backend -c Release --no-restore
