Add Localhost support for Android

--- a/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
+++ b/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
@@ -75,4 +75,10 @@
 		<GraphQLConfig Remove=".graphqlrc.json" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Platforms\Android\Resources\xml\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Platforms\Android\Resources\xml\" />
+	</ItemGroup>
 </Project>
