--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,13 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-    - name: Setup .NET v6.0
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET v7.0
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '6.0.x'
-
-    - name: Install dependencies
-      run: dotnet restore src/HotChocolateGraphQL.Backend/
+        dotnet-version: '7.0.x'
 
     - name: Build
-      run: dotnet build src/HotChocolateGraphQL.Backend -c Release --no-restore
+      run: dotnet build src/HotChocolateGraphQL.Backend -c Release
