--- a/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
+++ b/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
@@ -27,16 +27,16 @@
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-ios|AnyCPU'">
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 	  <EnableCodeSigning>false</EnableCodeSigning>
 	</PropertyGroup>
 
-	<ItemGroup Condition="!$(TargetFramework.StartsWith('net6.0-android'))">
+	<ItemGroup Condition="!$(TargetFramework.EndsWith('-android'))">
 		<Compile Remove="**/*.Android.cs" />
 		<Compile Remove="**/Android/**/*.cs" />
 	</ItemGroup>
 
-	<ItemGroup Condition="!$(TargetFramework.StartsWith('net6.0-ios')) AND !$(TargetFramework.StartsWith('net6.0-maccatalyst'))">
+	<ItemGroup Condition="!$(TargetFramework.EndsWith('-ios')) AND !$(TargetFramework.EndsWith('-maccatalyst'))">
 		<Compile Remove="**/*.macios.cs" />
 		<Compile Remove="**/macios/**/*.cs" />
 	</ItemGroup>
@@ -73,12 +73,5 @@
 		<GraphQL Remove="schema.graphql" />
 		<GraphQL Remove="schema.extensions.graphql" />
 		<GraphQLConfig Remove=".graphqlrc.json" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Remove="Platforms\Android\Resources\xml\" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Platforms\Android\Resources\xml\" />
 	</ItemGroup>
 </Project>
