Add Lambda Support

--- a/src/HotChocolateGraphQL.Backend/HotChocolateGraphQL.Backend.csproj
+++ b/src/HotChocolateGraphQL.Backend/HotChocolateGraphQL.Backend.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+     <AWSProjectType>Lambda</AWSProjectType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.5" />
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.5.1" />
   </ItemGroup>
 
   <ItemGroup>
