--- a/.github/workflows/maui.yml
+++ b/.github/workflows/maui.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   Build_Android:
-    runs-on: macos-11
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v1
@@ -33,7 +33,7 @@ jobs:
           dotnet build ./src/HotChocolateGraphQL.Mobile -f net7.0-android
 
   Build_iOS:
-    runs-on: macos-12
+    runs-on: macos-13
 
     steps:
       - uses: actions/checkout@v1
@@ -61,7 +61,7 @@ jobs:
           dotnet build ./src/HotChocolateGraphQL.Mobile -f net7.0-ios
           
   Build_MacCatalyst:
-    runs-on: macos-12
+    runs-on: macos-13
 
     steps:
       - uses: actions/checkout@v1
