--- a/src/HotChocolateGraphQL.Backend/HotChocolateGraphQL.Backend.csproj
+++ b/src/HotChocolateGraphQL.Backend/HotChocolateGraphQL.Backend.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Maui" Version="9.0.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.6" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.6" />
   </ItemGroup>
 
   <ItemGroup>
