--- a/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
+++ b/src/HotChocolateGraphQL.Mobile/HotChocolateGraphQL.Mobile.csproj
@@ -48,10 +48,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)"/>
+    <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiPackageVersion)"/>
+    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiPackageVersion)"/>
     <PackageReference Include="CommunityToolkit.Maui" Version="7.0.0"/>
     <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.0.0"/>
-    <PackageReference Include="StrawberryShake.Maui" Version="13.7.0"/>
+    <PackageReference Include="StrawberryShake.Maui" Version="13.9.6" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2"/>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.0"/>
   </ItemGroup>
